# maritime-hackathon-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  EXECUTION_PLAN.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py  constants.py
src/aggregation/: __init__.py  vessel.py
src/cli/: __init__.py  console.py  progress.py  tables.py
src/cost/: __init__.py  calculator.py
src/data/: __init__.py  loader.py
src/emissions/: __init__.py  calculator.py
src/fuel/: __init__.py  consumption.py
src/optimization/: __init__.py  mcmc.py  pareto.py  sensitivity.py  shapley.py  solver.py  types.py
src/output/: __init__.py  exporter.py
src/processing/: __init__.py  activity.py  load_factor.py  mode.py
